--- a/JapFase1/sell.html
+++ b/JapFase1/sell.html
@@ -10,37 +10,59 @@
   <meta name="description" content="">
   <title>eMercado - Todo lo que busques está aquí</title>
 
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
   <link href="css/dropzone.css" rel="stylesheet">
+
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <nav class="site-header sticky-top py-1 bg-dark">
-    <div class="container d-flex flex-column flex-md-row justify-content-between">
-      <a class="py-2 d-none d-md-inline-block" href="# "></a>
-      <a class="py-2 d-none d-md-inline-block" href="home.html">Inicio</a>
-      <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
-      <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
-      <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
+  <nav class="navbar navbar-expand-lg navbar-dark sticky-top py-1 bg-dark">
+    <div class="container-fluid site-header">
 
-      <!--Menú despegable con Boostrap-->
-      <div class="dropdown">
-        <a class="btn btn-secondary dropdown-toggle prueba" role="button" id="entrada" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false" class="py-2 d-none d-md-inline-block" href="my-profile.html"
-          id="entrada"></a>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-          <a class="dropdown-item" href="my-profile.html">Mi perfil<i class="fas fa-street-view"></i></a>
-          <a class="dropdown-item" href="#" onclick="signOut();">Cerrar sesión<i class="fas fa-sign-out-alt"></i></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse justify-content-between flex" id="navbarSupportedContent">
+        <!--<ul class="navbar-nav me-auto mb-2 mb-lg-0">-->
+        <div class="nav-item">
+          <a class="nav active py-2 d-md-inline-block" aria-current="page" href="home.html">Inicio</a>
+        </div>
+        <div class="nav-item">
+          <a class="nav py-2  d-md-inline-block" href="categories.html">Categorías</a>
+        </div>
+        <div class="nav-item">
+          <a class="nav py-2  d-md-inline-block" href="products.html">Productos</a>
+        </div>
+        <div class="nav-item">
+          <a class="nav py-2  d-md-inline-block" href="sell.html">Vender</a>
+        </div>
+
+        <!--Menú despegable con Boostrap-->
+        <div class="dropdown">
+          <a class="btn btn-secondary dropdown-toggle prueba" role="button" id="entrada" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false" class="py-2 d-none d-md-inline-block" href="my-profile.html"
+            id="entrada"></a>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <a class="dropdown-item" href="my-profile.html">Mi perfil<i class="fas fa-street-view"></i></a>
+            <span id="icon-menu">
+              <a class="dropdown-item" href="cart.html">Carrito<i class="fas fa-cart-plus"></i></a></span>
+            <a class="dropdown-item" href="#" onclick="signOut();">Cerrar sesión<i class="fas fa-sign-out-alt"></i></a>
+          </div>
         </div>
       </div>
-      <div id="icon-menu">
-        <a class="dropdown-item" href="cart.html"><i class="fas fa-cart-plus"></i></a>
-      </div>
-    </div>
   </nav>
   <div class="container">
 
@@ -80,8 +102,8 @@
           <div class="row">
             <div class="col-md-3 mb-3">
               <label for="zip">Costo</label>
-              <input type="number" class="form-control shadow" id="productCostInput" placeholder="" required="" value="0"
-                min="0">
+              <input type="number" class="form-control shadow" id="productCostInput" placeholder="" required=""
+                value="0" min="0">
               <div class="invalid-feedback">
                 El costo debe ser mayor que 0.
               </div>
@@ -117,8 +139,8 @@
           <div class="row">
             <div class="col-md-3 mb-3">
               <label for="productCountInput">Cantidad en stock</label>
-              <input type="number" class="form-control shadow" id="productCountInput" placeholder="" required="" value="1"
-                min="0">
+              <input type="number" class="form-control shadow" id="productCountInput" placeholder="" required=""
+                value="1" min="0">
               <div class="invalid-feedback">
                 La cantidad es requerida.
               </div>
